Istio/timeout/destination-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: python-cb
spec:
  host: python-cb
  subsets:
    - name: v1
      labels:
        version: v1
